--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native/new-app-screen": "0.84.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.12.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "react": "19.2.3",
     "react-native": "0.84.0",
     "react-native-bouncy-checkbox": "^4.1.4",
@@ -26,7 +27,8 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.23.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-vision-camera": "^4.7.3"
+    "react-native-vision-camera": "^4.7.3",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
