--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.84.0",
     "react-native-bouncy-checkbox": "^4.1.4",
     "react-native-date-picker": "^5.0.13",
+    "react-native-image-crop-picker": "^0.51.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.15.0",
     "react-native-safe-area-context": "^5.6.2",
