--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,15 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
+
+  "emulators": {
+    "functions": {
+      "port": 5001,
+      "host": "0.0.0.0"
+    }
+  },
+
+
   "functions": [
     {
       "source": "functions",
