--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^23.8.6",
     "@react-native-firebase/firestore": "^23.8.6",
+    "@react-native-firebase/functions": "^23.8.6",
     "@react-native-firebase/storage": "^23.8.6",
     "@react-native-vector-icons/material-design-icons": "^12.4.0",
     "@react-native/new-app-screen": "0.84.0",
